# caregraph

./: .gitignore  CLAUDE.md  LICENSE  M1-SUMMARY.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: error_report.md
.github/workflows/: deploy.yml
deploy/: deploy.sh  nginx.conf
docs/: aco-contextual-layers.md  aco-data-presentation-decisions.md  cms-dataset-combinations-for-vbc.md  cms-dataset-expansion.md  county-page-design.md  hhs-datagov-dataset-suggestions.md  hospital-page-redesign.md  methodology-page-completion.md  non-cms-datasets.md  tier-a-implementation-decisions.md
docs/old/: M2-M5-DECISIONS.md  cms-unified-vbc-tool-spec.md  phase1-3-decisions.md
etl/: rebuild_counties.py  run.py
etl/acquire/: download.py
etl/editorial/: .checkpoint.json  README.md  run.py  validate.py
etl/editorial/hints/: aco-bene-county.md  aco-participants.md  aco-snf-affiliates.md  cdc-places.md  cdc-sdoh.md  cms-chronic-conditions.md  geo-var-county.md  hac-reduction.md  hosp-complications.md  hosp-cost-report.md  hosp-hai.md  hosp-hcahps.md  hosp-mspb.md  hosp-timely-care.md  hosp-unplanned-visits.md  hrrp.md  hvbp-tps.md  inpatient-by-drg.md  mssp-performance.md  nadac.md  nh-deficiencies.md  nh-ownership.md  nh-penalties.md  nh-provider-info.md  nh-quality-mds.md  partb-discarded-units.md  (+4 more)
etl/normalize/: keys.py
etl/provenance/: envelope.py
etl/validate/: schemas.py
site/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts
site/.astro/: data-store.json  settings.json
site/public/: search-index.json
site/tests/: smoke.spec.ts
(+73 files in other folders)
