[project]
name = "caregraph-etl"
version = "0.1.0"
description = "ETL pipeline for CareGraph — unified CMS data exploration tool"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["etl*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
